feat: agrega nueva sección de testimonios

--- a/devJobs/html-css/index.html
+++ b/devJobs/html-css/index.html
@@ -10,14 +10,19 @@
 
 <body>
     <header>
-        <h2>devJobs</h2>
+        <h1>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-code-circle-2"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8.5 13.5l-1.5 -1.5l1.5 -1.5" /><path d="M15.5 10.5l1.5 1.5l-1.5 1.5" /><path d="M3 12a9 9 0 1 0 18 0a9 9 0 1 0 -18 0" /><path d="M13 9.5l-2 5.5" />
+            </svg>
+            devJobs
+        </h1>
+
         <nav>
             <a  href="">Inicio</a>
             <a  href="">Empleos</a>
         </nav>
-        <div>
-            <a href="">Publicar un empleo</a>
-            <a href="">Iniciar sesion</a>
+        <div class="header-acciones">
+            <a href="" class="btn-publicar">Publicar un empleo</a>
+            <a href="" class="btn-iniciar">Iniciar sesion</a>
         </div>
 
     </header>
@@ -78,7 +83,31 @@
         </article>
        </footer>
    </section>
-    
+
+    <section>
+         <header>
+                <h2>Nuestra comunidad en acción</h2>
+                <p>Más que una bolsa de empleo, somos el motor de tu próximo gran salto profesional. </p>
+                <p>Conoce a los desarrolladores que transformaron su carrera, conectaron con empresas líderes y hoy forman parte de la comunidad técnica que está construyendo el futuro digital.</p>
+            </header>
+        <footer>
+
+        <article>
+        <img src="/imagenes/employee.jpg" alt="">
+        <div  class="testimonial-content"> 
+        <h3>Isacc</h3>
+        <p>"Después de meses buscando el proyecto ideal, devJobs me conectó con una empresa que no solo valoró mis habilidades técnicas, sino también mi visión profesional. Hoy trabajo como Senior Developer en el entorno que siempre soñé, con un equipo increíble y el salario que realmente refleja mi experiencia. Fue el puente definitivo para alcanzar mi meta laboral."</p>
+        </div>
+    </article>
+            <article>
+            <img src="/imagenes/team.jpg" alt="">
+            <div  class="testimonial-content">
+            <h3>Kenny</h3>
+            <p>"Formar parte de una empresa con una cultura 'tech woman' era mi objetivo principal. Gracias a devJobs, encontré un espacio que no solo valora mi código, sino que potencia mi liderazgo y me permite colaborar con otras mujeres increíbles en la industria. Ingresar a este equipo ha sido el impulso definitivo para mi carrera y mi confianza como desarrolladora."</p>
+            </div>
+        </article>
+        </footer>
+    </section>
 
     </main>
     <footer>
