agrega empleos.html y cambios de estilo

--- a/devJobs/html-css/index.html
+++ b/devJobs/html-css/index.html
@@ -3,9 +3,10 @@
 <html>
     
     <head> 
+        <title>devJobs-Inicio</title>
         <meta  charset="UTF-8"/>
         <meta name="description" content="Encuentra las mejores ofertas de trabajo para desarrolladores en devJobs">
-        <link rel="stylesheet" href="./styles.css" />
+        <link rel="stylesheet" href="styles.css" />
     </head>
 
 <body>
@@ -17,8 +18,8 @@
         </h1>
 
         <nav>
-            <a  href="">Inicio</a>
-            <a  href="">Empleos</a>
+            <a  href="index.html">Inicio</a>
+            <a  href="empleos.html">Empleos</a>
         </nav>
         <div class="header-acciones">
             <a href="" class="btn-publicar">Publicar un empleo</a>
@@ -28,7 +29,7 @@
     </header>
     <main>
         <section>
-            <img src="/imagenes/developers.png"/>
+            <img src="../imagenes/developers.png"/>
             <h1>Conectamos talento en desarrollo web </h1>
             <p>Unite a la comunidad más grande de desarrolladores e impulsa tu carrera profesional.</p>
 
@@ -93,14 +94,14 @@
         <footer>
 
         <article>
-        <img src="/imagenes/employee.jpg" alt="">
+        <img src="../imagenes/employee.jpg" alt="">
         <div  class="testimonial-content"> 
         <h3>Isacc</h3>
         <p>"Después de meses buscando el proyecto ideal, devJobs me conectó con una empresa que no solo valoró mis habilidades técnicas, sino también mi visión profesional. Hoy trabajo como Senior Developer en el entorno que siempre soñé, con un equipo increíble y el salario que realmente refleja mi experiencia. Fue el puente definitivo para alcanzar mi meta laboral."</p>
         </div>
     </article>
             <article>
-            <img src="/imagenes/team.jpg" alt="">
+            <img src="../imagenes/team.jpg" alt="">
             <div  class="testimonial-content">
             <h3>Kenny</h3>
             <p>"Formar parte de una empresa con una cultura 'tech woman' era mi objetivo principal. Gracias a devJobs, encontré un espacio que no solo valora mi código, sino que potencia mi liderazgo y me permite colaborar con otras mujeres increíbles en la industria. Ingresar a este equipo ha sido el impulso definitivo para mi carrera y mi confianza como desarrolladora."</p>
